넥서스 배포 및 서비스 등록 추가